# playlist-app

./: README.md  pyproject.toml  server.py  spotify_auth.py
templates/: index.html
